--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <a id="web-license" class="anchor" href="#web-license" aria-hidden="true"><span class="octicon octicon-link"></span></a>Web License</h2>
 
 <ol>
-<li><a href="edu.delestra.com/interfaces-apache-netfilter-slides/">Interfaces, Apache and Netfilter</a></li>
+<li><a href="/interfaces-apache-netfilter-slides/">Interfaces, Apache and Netfilter</a></li>
 <li><a href="">Vagrant and Docker</a></li>
 </ol>
 
