create Vagrant and Docker link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
 <ol>
 <li><a href="/interfaces-apache-netfilter-slides/">Interfaces, Apache and Netfilter</a></li>
-<li><a href="">Vagrant and Docker</a></li>
+<li><a href="/vagrant-slides/">Vagrant introduction</a></li>
+<li><a href="/docker-slides/">Docker introduction</a></li>
 </ol>
 
 <h2>
