--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/lodelestra-edu">View on GitHub</a>
 
           <h1 id="project_title">Courses | Loïc Delestra</h1>
-          <h2 id="project_tagline">Courses slides and training subjects</h2>
+          <h2 id="project_tagline">Class slides and training subjects</h2>
 
         </header>
     </div>
