--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <li><a href="/interfaces-apache-netfilter-slides/">Interfaces, Apache and Netfilter</a></li>
 <li><a href="/vagrant-slides/">Vagrant introduction</a></li>
 <li><a href="/docker-slides/">Docker introduction</a></li>
+<li><a href="/vagrant-training/training1_subject.pdf">Training 1 Vagrant</a></li>
 </ol>
 
 <h2>
