--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <li><a href="/vagrant-slides/">Vagrant introduction</a></li>
 <li><a href="/docker-slides/">Docker introduction</a></li>
 <li><a href="/vagrant-training/training1_subject.pdf">Training 1 Vagrant</a></li>
+<li><a href="/docker-introduction-training/training2_subject.pdf">Training 2 Introduction to Docker</a></li>
 </ol>
 
 <h2>
