add kali metasploitable training1

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 <h2>
 <a id="isima" class="anchor" href="#isima" aria-hidden="true"><span class="octicon octicon-link"></span></a>ISIMA</h2>
 
+<ol>
+<li><a href="/kali-metasploitable-training/training1_subject.pdf">Training 1 Setup the lab, first exploit</a></li>
+</ol>
+
+
       </section>
     </div>
 
