add docker compose training link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <li><a href="/docker-slides/">Docker introduction</a></li>
           <li><a href="/vagrant-training/training1_subject.pdf">Training 1 Vagrant</a></li>
           <li><a href="/docker-introduction-training/training2_subject.pdf">Training 2 Introduction to Docker</a></li>
+          <li><a href="/docker-compose-training/training3_subject.pdf">Training 3 Docker compose</a></li>
         </ol>
 
         <h1><a id="system-security" class="anchor" href="#system-security" aria-hidden="true"><span class="octicon octicon-link"></span></a>System security</h1>
