add docker compose link

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <li><a href="/buffer-overflow-slides/">Buffer overflow</a></li>
           <li><a href="/buffer-overflow-training/training2_subject.pdf">Buffer overflow training</a></li>
           <li><a href="/docker-introduction-training/training2_subject.pdf">Training Introduction to Docker</a></li>
+          <li><a href="/docker-compose-training/training3_subject.pdf">Training Docker compose</a></li>
         </ol>
 
       </section>
