add git training link

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <li><a href="/interfaces-apache-netfilter-slides/">Interfaces, Apache and Netfilter</a></li>
           <li><a href="/vagrant-slides/">Vagrant introduction</a></li>
           <li><a href="/docker-slides/">Docker introduction</a></li>
+          <li><a href="/git-training/">Training 0 Git</a></li>
           <li><a href="/vagrant-training/training1_subject.pdf">Training 1 Vagrant</a></li>
           <li><a href="/docker-introduction-training/training2_subject.pdf">Training 2 Introduction to Docker</a></li>
           <li><a href="/docker-compose-training/training3_subject.pdf">Training 3 Docker compose</a></li>
