add git course slides link

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <h2><a id="web-license" class="anchor" href="#web-license" aria-hidden="true"><span class="octicon octicon-link"></span></a>Web License</h2>
 
         <ol>
+          <li><a href="/slides-git/">Git introduction</a></li>
           <li><a href="/interfaces-apache-netfilter-slides/">Interfaces, Apache and Netfilter</a></li>
           <li><a href="/vagrant-slides/">Vagrant introduction</a></li>
           <li><a href="/docker-slides/">Docker introduction</a></li>
